--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jeremy Foster <jeremy.foster@live.com> (http://codefoster.com)",
   "license": "Apache 2.0",
   "dependencies": {
-    "botbuilder": "^4.0.0-m4.2.1"
+    "botbuilder": "^4.0.0-m4.2.1",
+    "restify": "^7.1.1"
   }
 }
